Fix blog post headings in dark mode

--- a/_includes/oneload64.css
+++ b/_includes/oneload64.css
@@ -761,11 +761,12 @@ background-color: #222527;
 footer .legal-line a {
 font-weight: 600;
 }
-@media (prefers-color-scheme:dark) {body {
+@media (prefers-color-scheme:dark) {
+  body {
   color: #ddd;
   }
-  .content {
-  background: #000;
+  .blog-post h3 a {
+    color: #ddd;    
   }
   .content section:nth-child(odd) {
   background-color: #141414;
